--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ beautifulsoup4==4.8.1
 urllib3==1.25.6
 bs4==0.0.1 
 spacy==2.2.2 
-nltk==3.4.5  
+nltk==3.4.5
+wikipedia==1.4.0
+simple-chalk==0.1.0
