--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "env_3.7.0/bin/python"
+    "python.pythonPath": "env_3.7.0/bin/python",
+    "python.formatting.provider": "yapf"
 }
